hphp/hack/test/typecheck/inout/bad_inout_use_assign2.php
<?hh

function f(inout string $s): void {
  g(inout $s);
}

function g(inout arraykey $a): void {}
